# Therapy-Chatbot

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  analysis_options.yaml  apt-requirements.txt  build.yaml  cloudbuild.yaml  flutter_launcher_icons.yaml  import_features.dart  manage.py  pubspec.yaml  pyproject.toml  requirements.txt
.cloud/: Dockerfile  cache_db-compose.yml
.cloudbuild/: .gitignore  Dockerfile  cloudbuild.yaml  docker-compose.yml
.devcontainer/: Dockerfile  Dockerfile.android  cache_db-compose.yml  db-compose.yml  devcontainer.json  docker-compose.yml  emulator-compose.yml  fdp-setup.sh  neo4j-compose.yml  restart-emulator.sh  standalone.sh
.github/: release.yml
.idx/: dev.nix
api/: base_url.json  base_url_debug_android.json  base_url_template.json  forgot_password_info.json  latest_app_version.json
app_assets/: circle.riv  config.json  config_template.json
chatbot/: .env.example  admin.py  agent.py  bulk_utils.patch  consumers.py  gemini.py  models.py  ollama.py  routing.py  urls.py  views.py
cloud/: docker-compose.yml
core/: admin.py  crypto.py  models.py  urls.py  util.py  utils.py  views.py
docs/: colab.md  deployment.md  fdp_instructions.md  firebasestudio-idx_instructions.md  local_setup.md
fonts/: OFL.txt
journal/: models.py  serializers.py  urls.py  views.py
lib/: api_service.dart  app_state.dart  hot_restart_mixin.dart  main copy.dart  main.dart  navigation.dart  preferences.dart  session.dart
linux/: CMakeLists.txt  my_application.cc
llm/: ollama.ipynb  test.ipynb  tunnel.ipynb
login/: apps.py  models.py  urls.py  views.py
scripts/: apply-patches.sh  clear-graphiti-data.py  codespace-env.py  django-migrate.sh  django-shell.sh  drift-drift_dev-make-migrations.sh  flutter-android-debug.sh  flutter-enforce-lockfile.sh  flutter-test.sh  idx-buildenv.sh  idx-clear-env.sh  idx-clearenv.sh  idx-delete-db.sh  idx-delete-neo4j.sh  idx-deletedb.sh  (+21 more)
(+107 files in other folders)
