[tool.poetry]
name = "therapy-chatbot"
version = "0.1.0"
description = "Therapy Chatbot"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argon2-cffi = "^23.1.0"
cryptography = "^44.0.2"
django = "^5.2"
psycopg = {extras = ["binary"], version = "^3.2.6"}
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
